[package]
name = "asp_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
# Graph data structure for justification graphs
petgraph = "0.6"
# Serialization for exporting graphs/explanations
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Error handling
thiserror = "2"
anyhow = "1"
regex = "1.12.3"
either = "1.15.0"
